name:           petstore
version:        0.0.1
category:       Tutorial
synopsis:       pet behaviors
description:    a pet store simulation
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
    type:     git
    location: git://github.com/mcandre/toys.git

library
    build-depends:
        base >= 4.3.1.0 && < 5

    exposed-modules: Cat, Dog

    ghc-options: -Wall -fwarn-tabs
    hs-source-dirs: src

executable cat-cli
    build-depends:
        base >= 4.3.1.0 && < 5

    main-is: CatCLI.hs
    other-modules: Cat, Dog
    hs-source-dirs: src
    ghc-options: -Wall -fwarn-tabs

executable petstore
    build-depends:
        base >= 4.3.1.0 && < 5

    main-is: Petstore.hs
    other-modules: Cat, Dog
    hs-source-dirs: src
    ghc-options: -Wall -fwarn-tabs

test-suite reference
    build-depends:
        base                        >= 4.3.1.0 && < 5,
        hlint                       >= 2.1.10 && < 3,
        shake                       >= 0.16.4 && < 0.17

    ghc-options:        -Wall -fwarn-tabs
    hs-source-dirs:     src
    main-is:            Petstore.hs
    type:               exitcode-stdio-1.0
