name:           philabuster
version:        0.0.1
category:       Tutorial
synopsis:       insult generator
description:    a Better Off Ted-inspired insult generator
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable philabuster
  build-depends:
    base           >= 4.3.1.0 && < 5,
    random         >= 1.1 && < 2,
    random-shuffle >= 0.0.4 && < 0.0.5

  main-is: Philabuster.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
