name:           shpidertest
version:        0.0.1
category:       Tutorial
synopsis:       shpider library test
description:    A demo of shpider HTTP lib
license:        BSD3
license-file:   LICENSE.md
author:         Andrew Pennebaker
maintainer:     andrew.pennebaker@gmail.com
build-type:     Simple
cabal-version:  >=1.8

source-repository head
  type:     git
  location: git://github.com/mcandre/toys.git

executable shpidertest
  build-depends:
    base    >= 4.3.1.0 && < 5,
    shpider >= 0.2.1.1 && < 0.3

  main-is: Shpidertest.hs
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
